--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@ title: Hexo
 subtitle: ""
 description: ""
 keywords:
-author: John Doe
+author: SHINZAMONO
 language: zh-CN
 timezone: ""
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://academia-hexo-netlify-cms.vercel.app
+url: https://morning-v0-0-1.vercel.app
 permalink: :title/
 permalink_defaults:
 pretty_urls:
