--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -10,6 +10,7 @@ public_folder: "images" # The src attribute for uploaded media will begin with i
 
 # This line should *not* be indented
 publish_mode: editorial_workflow
+locale: "zh_Hans"
 
 collections:
   - name: "Page" # Used in routes, e.g., /admin/collections/blog
