--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -5,8 +5,8 @@ backend:
   base_url: https://morning-v0-0-1.vercel.app
 
 # These lines should *not* be indented
-media_folder: "source/images" # Media files will be stored in the repo under source/images
-public_folder: "images" # The src attribute for uploaded media will begin with images
+media_folder: "source/img" # Media files will be stored in the repo under source/images
+public_folder: "img" # The src attribute for uploaded media will begin with images
 
 # This line should *not* be indented
 publish_mode: editorial_workflow
