--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -5,21 +5,30 @@ backend:
   base_url: https://morning-v0-0-1.vercel.app
 
 # These lines should *not* be indented
-media_folder: "source/img" # Media files will be stored in the repo under source/images
-public_folder: "img" # The src attribute for uploaded media will begin with images
+media_folder: "source/img/upload" # Media files will be stored in the repo under source/images
+public_folder: "img/upload" # The src attribute for uploaded media will begin with images
 
 # This line should *not* be indented
 publish_mode: editorial_workflow
 locale: "zh_Hans"
 
 collections:
-  - name: "Page" # Used in routes, e.g., /admin/collections/blog
-    label: "Page" # Used in the UI
+  - name: "posts" # Used in routes, e.g., /admin/collections/blog
+    label: "Post" # Used in the UI
     folder: "source/_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - { label: "Title", name: "title", widget: "string" }
+      - { label: "标题", name: "title", widget: "string", required: true }
+      - {
+          label: "发布日期",
+          name: "date",
+          widget: "datetime",
+          format: "YYYY-MM-DD HH:mm:ss",
+          dateFormat: "YYYY-MM-DD",
+          timeFormat: "HH:mm:ss",
+          required: false,
+        }
       - {
           label: "Homepage",
           name: "academia",
