--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -30,6 +30,25 @@ collections:
           required: false,
         }
       - {
+          label: "更新日期",
+          name: "updated",
+          widget: "datetime",
+          format: "YYYY-MM-DD HH:mm:ss",
+          dateFormat: "YYYY-MM-DD",
+          timeFormat: "HH:mm:ss",
+          required: false,
+        }
+      - { label: "标签", name: "tags", widget: "list", required: false }
+      - { label: "分类", name: "categories", widget: "list", required: false }
+      - { label: "关键词", name: "keywords", widget: "list", required: false }
+      - { label: "顶部图", name: "cover", widget: "image", required: false }
+      - {
+          label: "文章封面",
+          name: "index_img",
+          widget: "image",
+          required: false,
+        }
+      - {
           label: "Homepage",
           name: "academia",
           widget: "boolean",
