--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -53,7 +53,7 @@ algolia_search:
 local_search:
   enable: true
   preload: true
-  CDN: https://cdn.jsdelivr.net/gh/SHINZAMONO/Morning_v0.0.1/db.json
+  CDN: https://cdn.jsdelivr.net/gh/SHINZAMONO/Morning_v0.0.1/public/search.xml
 
 # Math (數學)
 # --------------------------------------
